корректировка обхода sudo с помощью polkit, и обновление документации